      debconf-dumpdb rather than messing with the DEBCONF_CONFIG environment
      variable.
    - Constify question_db_new instance parameter.
    - If DEBCONF_NO_I18N=1 is set in the environment, ignore localised
      fields in templates. This is a hack to let debconf-copydb and
      debconf-dumpdb work with template databases produced by debconf.

 -- Colin Watson <cjwatson@debian.org>  Wed, 15 Jun 2005 16:16:34 +0100

cdebconf (0.79) unstable; urgency=low

  * Attilio Fiandrotti
    - Remove old experimental code that was no longer needed.
    - Minor changes in main menu appearance.
    - Single SELECT questions are now handled with a GTKTreeView widget.
  * Colin Watson
    - When starting up a client, try talking to stdout if fd 3 isn't open
      (closes: #287036).

 -- Colin Watson <cjwatson@debian.org>  Mon,  6 Jun 2005 16:43:37 +0100

cdebconf (0.78) unstable; urgency=low

  * Brad Hards
    - Use NEWT_FLAG_PASSWORD rather than NEWT_FLAG_HIDDEN for password
      questions, so that feedback is provided using asterisks (Ubuntu bug
      #7695).
  * Attilio Fiandrotti
    - Enhanced gtk frontend with support for always displaying the main
      menu and "jumping" between menu items. Lots of other changes.
  * Colin Watson
    - Add iterate methods to the stack database module.
    - Throw "100 internal error" if a frontend's go() method returns
      DC_NOTOK.
    - Log a warning and fall back to displaying an unsorted list if a
      template's Indices don't match its Choices, namely too few indices or
      an index out of range (closes: #309667).
    - Provide a real alternative for the build-dependency on the virtual
      libdebian-installer-dev.
    - Don't warn about TITLE with an empty argument; debconf tends to send
      this over passthrough when starting up.
  * Updated translations:
    - Arabic (ar.po) by Ossama M. Khayat
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Basque (eu.po)
    - Hebrew (he.po) by Lior Kaplan