@@ -10,6 +10,11 @@ cdebconf (0.80) UNRELEASED; urgency=low
     - If DEBCONF_NO_I18N=1 is set in the environment, ignore localised
       fields in templates. This is a hack to let debconf-copydb and
       debconf-dumpdb work with template databases produced by debconf.
+    - Look at config::instance::*::template to find out which template
+      database to use when reading a given config database (which makes a
+      difference for questions created using REGISTER). This is only used by
+      debconf-copydb and debconf-dumpdb right now, and the global template
+      database is retained as a fallback.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 15 Jun 2005 16:16:34 +0100
 
